--- a/Aviation_Accidents_Data_Analysis.ipynb
+++ b/Aviation_Accidents_Data_Analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f41a5544",
    "metadata": {},
    "outputs": [],
@@ -45,11 +45,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "149894c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('/Users/mikeb/Documents/Flatiron/AD02/lab/dsc-course0-m8-lab/data/AviationData_Cleaned.csv', \n",
+    "                 encoding='latin-1',\n",
+    "                 low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ce1e434a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Event.Id Investigation.Type Accident.Number  Event.Date  \\\n",
+      "0   20001214X42478           Incident     LAX83IA149B  1983-03-18   \n",
+      "1   20001214X42478           Incident     LAX83IA149A  1983-03-18   \n",
+      "2   20001214X42331           Accident      ATL83FA140  1983-03-20   \n",
+      "3   20001214X42672           Accident      FTW83LA177  1983-04-02   \n",
+      "4   20001214X44248           Incident      MIA83IA210  1983-08-21   \n",
+      "..             ...                ...             ...         ...   \n",
+      "95  20001211X16199           Accident      LAX93WA090  1992-12-29   \n",
+      "96  20001211X12054           Accident      ANC93FA054  1993-04-23   \n",
+      "97  20001211X13214           Accident      NYC93FA154  1993-08-14   \n",
+      "98  20001211X13180           Accident      LAX93LA329  1993-08-18   \n",
+      "99  20001211X13402           Accident      FTW93LA257  1993-09-04   \n",
+      "\n",
+      "             Location        Country Injury.Severity Aircraft.damage  \\\n",
+      "0     LOS ANGELES, CA  United States        Incident           Minor   \n",
+      "1     LOS ANGELES, CA  United States        Incident           Minor   \n",
+      "2      CROSSVILLE, TN  United States        Fatal(1)       Destroyed   \n",
+      "3        MCKINNEY, TX  United States        Fatal(1)             NaN   \n",
+      "4         NORFOLK, VA  United States        Incident           Minor   \n",
+      "..                ...            ...             ...             ...   \n",
+      "95     LORETO, MEXICO         Mexico       Non-Fatal     Substantial   \n",
+      "96      KASHWITNA, AK  United States        Fatal(2)       Destroyed   \n",
+      "97  EAST MORICHES, NY  United States        Fatal(1)       Destroyed   \n",
+      "98      PACIFIC OCEAN  PACIFIC OCEAN       Non-Fatal       Destroyed   \n",
+      "99       FENTRESS, TX  United States        Fatal(1)           Minor   \n",
+      "\n",
+      "   Aircraft.Category Registration.Number  ... Total.Serious.Injuries  \\\n",
+      "0           Airplane              N323EA  ...                    0.0   \n",
+      "1           Airplane               9VSQQ  ...                    0.0   \n",
+      "2           Airplane              N9600W  ...                    1.0   \n",
+      "3           Airplane              N927BA  ...                    0.0   \n",
+      "4           Airplane               N69NA  ...                    0.0   \n",
+      "..               ...                 ...  ...                    ...   \n",
+      "95          Airplane              N4506X  ...                    0.0   \n",
+      "96          Airplane              N3741Z  ...                    0.0   \n",
+      "97          Airplane              N5010D  ...                    4.0   \n",
+      "98          Airplane              N1232H  ...                    0.0   \n",
+      "99          Airplane              N125MB  ...                    0.0   \n",
+      "\n",
+      "   Total.Minor.Injuries Total.Uninjured  Weather.Condition  \\\n",
+      "0                   0.0           588.0                VMC   \n",
+      "1                   0.0           588.0                VMC   \n",
+      "2                   0.0             0.0                IMC   \n",
+      "3                   0.0             4.0                VMC   \n",
+      "4                   0.0           289.0                VMC   \n",
+      "..                  ...             ...                ...   \n",
+      "95                  0.0             2.0                VMC   \n",
+      "96                  0.0             0.0                VMC   \n",
+      "97                  0.0             0.0                VMC   \n",
+      "98                  0.0             1.0                VMC   \n",
+      "99                  0.0            10.0                VMC   \n",
+      "\n",
+      "   Broad.phase.of.flight Publication.Date Total.Passengers  \\\n",
+      "0               Standing       04-12-2014            588.0   \n",
+      "1                   Taxi       04-12-2014            588.0   \n",
+      "2                 Cruise       02-05-2011              2.0   \n",
+      "3               Standing       17-10-2016              5.0   \n",
+      "4                 Cruise       01-02-2016            289.0   \n",
+      "..                   ...              ...              ...   \n",
+      "95                   NaN       05-08-1996              2.0   \n",
+      "96           Maneuvering       17-08-2012              2.0   \n",
+      "97               Takeoff       17-10-2016              5.0   \n",
+      "98                Cruise       23-03-2016              1.0   \n",
+      "99                Cruise       17-10-2016             11.0   \n",
+      "\n",
+      "    Aircraft.destroyed             Make.Model  Size.Airplane  \n",
+      "0                False     lockheed -- l-1011          Large  \n",
+      "1                False          boeing -- 747          Large  \n",
+      "2                 True     piper -- pa-28-140          Small  \n",
+      "3                False  de havilland -- dhc-6          Small  \n",
+      "4                False    douglas -- dc-10-10          Large  \n",
+      "..                 ...                    ...            ...  \n",
+      "95               False     piper -- pa-34-200          Small  \n",
+      "96                True     piper -- pa-18-150          Small  \n",
+      "97                True         cessna -- 182a          Small  \n",
+      "98                True     piper -- pa-34-220          Small  \n",
+      "99               False         beech -- c-45h          Small  \n",
+      "\n",
+      "[100 rows x 28 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head(100))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,13 +162,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "d307c888",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0: 904\n",
+      "1.0: 9062\n",
+      "2.0: 6740\n",
+      "3.0: 1642\n",
+      "4.0: 1098\n",
+      "5.0: 348\n",
+      "6.0: 207\n",
+      "7.0: 141\n",
+      "8.0: 70\n",
+      "9.0: 66\n",
+      "10.0: 52\n",
+      "11.0: 18\n",
+      "12.0: 27\n",
+      "13.0: 20\n",
+      "14.0: 15\n",
+      "15.0: 10\n",
+      "16.0: 10\n",
+      "17.0: 6\n",
+      "18.0: 11\n",
+      "19.0: 6\n",
+      "20.0: 6\n",
+      "21.0: 4\n",
+      "22.0: 5\n",
+      "23.0: 4\n",
+      "24.0: 6\n",
+      "25.0: 2\n",
+      "26.0: 6\n",
+      "27.0: 5\n",
+      "28.0: 4\n",
+      "29.0: 2\n",
+      "30.0: 3\n",
+      "31.0: 4\n",
+      "32.0: 5\n",
+      "33.0: 5\n",
+      "34.0: 5\n",
+      "35.0: 2\n",
+      "36.0: 4\n",
+      "37.0: 7\n",
+      "38.0: 4\n",
+      "39.0: 6\n",
+      "40.0: 4\n",
+      "41.0: 6\n",
+      "42.0: 1\n",
+      "43.0: 1\n",
+      "44.0: 4\n",
+      "45.0: 4\n",
+      "46.0: 3\n",
+      "47.0: 5\n",
+      "48.0: 6\n",
+      "49.0: 6\n",
+      "50.0: 5\n",
+      "51.0: 9\n",
+      "52.0: 6\n",
+      "53.0: 17\n",
+      "54.0: 4\n",
+      "55.0: 5\n",
+      "56.0: 4\n",
+      "57.0: 3\n",
+      "58.0: 2\n",
+      "59.0: 2\n",
+      "61.0: 4\n",
+      "62.0: 2\n",
+      "63.0: 4\n",
+      "64.0: 4\n",
+      "65.0: 3\n",
+      "66.0: 7\n",
+      "67.0: 4\n",
+      "68.0: 1\n",
+      "69.0: 3\n",
+      "70.0: 2\n",
+      "71.0: 3\n",
+      "72.0: 1\n",
+      "73.0: 5\n",
+      "74.0: 3\n",
+      "75.0: 3\n",
+      "76.0: 5\n",
+      "77.0: 4\n",
+      "78.0: 1\n",
+      "79.0: 2\n",
+      "80.0: 7\n",
+      "81.0: 4\n",
+      "82.0: 1\n",
+      "83.0: 2\n",
+      "84.0: 4\n",
+      "85.0: 2\n",
+      "86.0: 5\n",
+      "87.0: 2\n",
+      "88.0: 4\n",
+      "89.0: 2\n",
+      "90.0: 3\n",
+      "91.0: 3\n",
+      "92.0: 2\n",
+      "93.0: 2\n",
+      "94.0: 2\n",
+      "95.0: 2\n",
+      "96.0: 5\n",
+      "97.0: 3\n",
+      "98.0: 3\n",
+      "99.0: 6\n",
+      "100.0: 6\n",
+      "101.0: 5\n",
+      "102.0: 8\n",
+      "103.0: 5\n",
+      "104.0: 4\n",
+      "105.0: 1\n",
+      "106.0: 2\n",
+      "107.0: 3\n",
+      "108.0: 6\n",
+      "109.0: 3\n",
+      "110.0: 4\n",
+      "111.0: 3\n",
+      "112.0: 7\n",
+      "113.0: 6\n",
+      "114.0: 4\n",
+      "115.0: 5\n",
+      "116.0: 4\n",
+      "117.0: 3\n",
+      "118.0: 2\n",
+      "119.0: 6\n",
+      "120.0: 5\n",
+      "121.0: 5\n",
+      "122.0: 5\n",
+      "123.0: 4\n",
+      "124.0: 3\n",
+      "125.0: 5\n",
+      "126.0: 2\n",
+      "127.0: 6\n",
+      "128.0: 3\n",
+      "129.0: 5\n",
+      "130.0: 6\n",
+      "131.0: 6\n",
+      "132.0: 7\n",
+      "133.0: 7\n",
+      "134.0: 9\n",
+      "135.0: 5\n",
+      "136.0: 2\n",
+      "137.0: 6\n",
+      "138.0: 7\n",
+      "139.0: 2\n",
+      "140.0: 9\n",
+      "141.0: 5\n",
+      "142.0: 12\n",
+      "143.0: 8\n",
+      "144.0: 7\n",
+      "145.0: 10\n",
+      "146.0: 7\n",
+      "147.0: 7\n",
+      "148.0: 8\n",
+      "149.0: 2\n",
+      "150.0: 8\n",
+      "151.0: 5\n",
+      "152.0: 4\n",
+      "153.0: 8\n",
+      "154.0: 5\n",
+      "155.0: 5\n",
+      "156.0: 6\n",
+      "157.0: 6\n",
+      "158.0: 2\n",
+      "159.0: 8\n",
+      "160.0: 4\n",
+      "161.0: 4\n",
+      "162.0: 7\n",
+      "163.0: 6\n",
+      "164.0: 3\n",
+      "165.0: 3\n",
+      "166.0: 5\n",
+      "167.0: 1\n",
+      "168.0: 3\n",
+      "169.0: 1\n",
+      "170.0: 5\n",
+      "171.0: 3\n",
+      "172.0: 6\n",
+      "173.0: 9\n",
+      "174.0: 4\n",
+      "175.0: 3\n",
+      "176.0: 3\n",
+      "177.0: 5\n",
+      "178.0: 6\n",
+      "179.0: 7\n",
+      "180.0: 5\n",
+      "181.0: 6\n",
+      "182.0: 3\n",
+      "183.0: 2\n",
+      "184.0: 4\n",
+      "185.0: 7\n",
+      "186.0: 9\n",
+      "187.0: 3\n",
+      "188.0: 2\n",
+      "189.0: 6\n",
+      "190.0: 5\n",
+      "191.0: 4\n",
+      "192.0: 3\n",
+      "193.0: 5\n",
+      "194.0: 6\n",
+      "195.0: 3\n",
+      "197.0: 1\n",
+      "198.0: 2\n",
+      "199.0: 3\n",
+      "200.0: 4\n",
+      "202.0: 2\n",
+      "203.0: 2\n",
+      "204.0: 1\n",
+      "205.0: 3\n",
+      "206.0: 1\n",
+      "207.0: 1\n",
+      "208.0: 3\n",
+      "209.0: 3\n",
+      "210.0: 2\n",
+      "211.0: 1\n",
+      "214.0: 4\n",
+      "216.0: 6\n",
+      "217.0: 4\n",
+      "218.0: 1\n",
+      "219.0: 4\n",
+      "220.0: 2\n",
+      "221.0: 5\n",
+      "222.0: 2\n",
+      "224.0: 2\n",
+      "225.0: 1\n",
+      "226.0: 1\n",
+      "227.0: 1\n",
+      "228.0: 4\n",
+      "229.0: 1\n",
+      "230.0: 1\n",
+      "231.0: 2\n",
+      "232.0: 2\n",
+      "235.0: 2\n",
+      "237.0: 1\n",
+      "238.0: 1\n",
+      "239.0: 2\n",
+      "241.0: 1\n",
+      "243.0: 2\n",
+      "244.0: 2\n",
+      "246.0: 1\n",
+      "250.0: 4\n",
+      "251.0: 1\n",
+      "252.0: 1\n",
+      "253.0: 2\n",
+      "254.0: 1\n",
+      "255.0: 2\n",
+      "256.0: 1\n",
+      "257.0: 2\n",
+      "258.0: 1\n",
+      "262.0: 4\n",
+      "263.0: 1\n",
+      "264.0: 1\n",
+      "265.0: 1\n",
+      "268.0: 2\n",
+      "269.0: 1\n",
+      "270.0: 1\n",
+      "272.0: 2\n",
+      "273.0: 1\n",
+      "274.0: 2\n",
+      "276.0: 3\n",
+      "277.0: 2\n",
+      "278.0: 1\n",
+      "279.0: 4\n",
+      "282.0: 1\n",
+      "285.0: 1\n",
+      "288.0: 3\n",
+      "289.0: 1\n",
+      "290.0: 2\n",
+      "291.0: 1\n",
+      "292.0: 2\n",
+      "294.0: 1\n",
+      "295.0: 3\n",
+      "298.0: 3\n",
+      "300.0: 2\n",
+      "301.0: 2\n",
+      "302.0: 1\n",
+      "306.0: 1\n",
+      "307.0: 1\n",
+      "309.0: 1\n",
+      "311.0: 1\n",
+      "312.0: 1\n",
+      "314.0: 1\n",
+      "315.0: 1\n",
+      "317.0: 1\n",
+      "319.0: 1\n",
+      "320.0: 1\n",
+      "321.0: 1\n",
+      "324.0: 3\n",
+      "326.0: 2\n",
+      "332.0: 1\n",
+      "333.0: 1\n",
+      "334.0: 1\n",
+      "336.0: 1\n",
+      "339.0: 2\n",
+      "340.0: 1\n",
+      "348.0: 1\n",
+      "352.0: 2\n",
+      "356.0: 1\n",
+      "358.0: 1\n",
+      "359.0: 1\n",
+      "361.0: 1\n",
+      "362.0: 1\n",
+      "365.0: 3\n",
+      "367.0: 1\n",
+      "368.0: 2\n",
+      "378.0: 1\n",
+      "383.0: 1\n",
+      "385.0: 1\n",
+      "394.0: 1\n",
+      "397.0: 1\n",
+      "403.0: 1\n",
+      "406.0: 1\n",
+      "422.0: 1\n",
+      "454.0: 1\n",
+      "455.0: 1\n",
+      "501.0: 2\n",
+      "521.0: 1\n",
+      "573.0: 2\n",
+      "576.0: 1\n",
+      "588.0: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Broad.phase.of.flight\n",
+    "\n",
+    "# Column to analyze\n",
+    "col_name = 'Total.Passengers'\n",
+    "\n",
+    "# Count occurrences of each unique value sorted by the value\n",
+    "value_counts = df[col_name].value_counts().sort_index()\n",
+    "\n",
+    "# sort by counts in descending order\n",
+    "#value_counts = df[col_name].value_counts().sort_values(ascending=False)\n",
+    "\n",
+    "# Print each value and its count\n",
+    "for value, count in value_counts.items():\n",
+    "    print(f\"{value}: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a99e3af0",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Total.Passengers Size.Airplane\n",
+      "0             588.0         Large\n",
+      "1             588.0         Large\n",
+      "2               2.0         Small\n",
+      "3               5.0         Small\n",
+      "4             289.0         Large\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create Size.Airplane using 20 or more passengers as threshold for \"Large\", else \"Small\"\n",
+    "df['Size.Airplane'] = np.where(df['Total.Passengers'] >= 20, 'Large','Small')\n",
+    "\n",
+    "# Verify\n",
+    "print(df[['Total.Passengers', 'Size.Airplane']].head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
