--- a/Aviation_Accidents_Cleaning.ipynb
+++ b/Aviation_Accidents_Cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 649,
    "id": "a72188a8",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 650,
    "id": "3f49a909",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 651,
    "id": "ee028f9a",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 652,
    "id": "07d77f1f",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 653,
    "id": "16a26d6e",
    "metadata": {},
    "outputs": [
@@ -8504,7 +8504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 654,
    "id": "5a2b7eab",
    "metadata": {},
    "outputs": [
@@ -8547,7 +8547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 655,
    "id": "12f6e499",
    "metadata": {},
    "outputs": [
@@ -8571,7 +8571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 656,
    "id": "a287ea9d",
    "metadata": {},
    "outputs": [
@@ -8601,7 +8601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 657,
    "id": "e311678c",
    "metadata": {},
    "outputs": [
@@ -8625,7 +8625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 658,
    "id": "dd437649",
    "metadata": {},
    "outputs": [
@@ -15787,7 +15787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 659,
    "id": "95ec4f4e",
    "metadata": {},
    "outputs": [
@@ -15874,7 +15874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 660,
    "id": "ef28a6d4",
    "metadata": {},
    "outputs": [
@@ -15998,7 +15998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 661,
    "id": "91b518b1",
    "metadata": {},
    "outputs": [
@@ -16028,7 +16028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 662,
    "id": "c5d5f5b5",
    "metadata": {},
    "outputs": [
@@ -16075,7 +16075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 663,
    "id": "cf9005cf",
    "metadata": {},
    "outputs": [
@@ -17435,7 +17435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 664,
    "id": "111707f0",
    "metadata": {},
    "outputs": [
@@ -17512,7 +17512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 665,
    "id": "b814ab75",
    "metadata": {},
    "outputs": [
@@ -17569,7 +17569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 666,
    "id": "05f20594",
    "metadata": {},
    "outputs": [
@@ -19689,7 +19689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 667,
    "id": "56ffe3c6",
    "metadata": {},
    "outputs": [
@@ -19734,7 +19734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 668,
    "id": "3c774222",
    "metadata": {},
    "outputs": [
@@ -21962,7 +21962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 669,
    "id": "73227cab",
    "metadata": {},
    "outputs": [
@@ -22012,7 +22012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 670,
    "id": "01df492e",
    "metadata": {},
    "outputs": [
@@ -22025,7 +22025,9 @@
       "Turbo Fan: 774\n",
       "Turbo Jet: 86\n",
       "Turbo Prop: 969\n",
-      "Turbo Shaft: 10\n"
+      "Turbo Shaft: 10\n",
+      "UNK: 1\n",
+      "Unknown: 112\n"
      ]
     }
    ],
@@ -22048,7 +22050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 671,
    "id": "b566d90a",
    "metadata": {},
    "outputs": [
@@ -22080,7 +22082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 672,
    "id": "26c4cdae",
    "metadata": {},
    "outputs": [
@@ -22114,7 +22116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 673,
    "id": "fc10388f",
    "metadata": {},
    "outputs": [
@@ -22146,7 +22148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 674,
    "id": "6479a268",
    "metadata": {},
    "outputs": [
@@ -22181,7 +22183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 675,
    "id": "4be81f19",
    "metadata": {},
    "outputs": [
@@ -22213,7 +22215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 676,
    "id": "72e0a924",
    "metadata": {},
    "outputs": [
@@ -22267,7 +22269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 677,
    "id": "9e40ef89",
    "metadata": {},
    "outputs": [
@@ -22299,7 +22301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 678,
    "id": "c9581ce5",
    "metadata": {},
    "outputs": [
@@ -22341,7 +22343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 679,
    "id": "c58a97e0",
    "metadata": {},
    "outputs": [
@@ -22382,7 +22384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 680,
    "id": "f661bb21",
    "metadata": {},
    "outputs": [
@@ -22449,7 +22451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 681,
    "id": "415ed5da",
    "metadata": {},
    "outputs": [
@@ -22490,7 +22492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 682,
    "id": "b425a512",
    "metadata": {},
    "outputs": [],
