Final Update to ipynb

--- a/Aviation_Accidents_Cleaning.ipynb
+++ b/Aviation_Accidents_Cleaning.ipynb
@@ -22510,7 +22510,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mac_intel.c0c1",
    "language": "python",
    "name": "python3"
   },
