Cleaning up and adding to README

--- a/Aviation_Accidents_Cleaning.ipynb
+++ b/Aviation_Accidents_Cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 1,
    "id": "a72188a8",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 2,
    "id": "3f49a909",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 3,
    "id": "ee028f9a",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 4,
    "id": "07d77f1f",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 5,
    "id": "16a26d6e",
    "metadata": {},
    "outputs": [
@@ -8504,7 +8504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 6,
    "id": "5a2b7eab",
    "metadata": {},
    "outputs": [
@@ -8539,7 +8539,6 @@
     "# Count occurrences of each unique value\n",
     "value_counts = df[col_name].value_counts().sort_index()\n",
     "\n",
-    "\n",
     "# Print each value and its count\n",
     "for value, count in value_counts.items():\n",
     "    print(f\"{value}: {count}\")"
@@ -8547,7 +8546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 7,
    "id": "12f6e499",
    "metadata": {},
    "outputs": [
@@ -8571,7 +8570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 8,
    "id": "a287ea9d",
    "metadata": {},
    "outputs": [
@@ -8593,7 +8592,6 @@
     "# Count occurrences of each unique value\n",
     "value_counts = df[col_name].value_counts().sort_index()\n",
     "\n",
-    "\n",
     "# Print each value and its count\n",
     "for value, count in value_counts.items():\n",
     "    print(f\"{value}: {count}\")"
@@ -8601,7 +8599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 9,
    "id": "e311678c",
    "metadata": {},
    "outputs": [
@@ -8625,7 +8623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 10,
    "id": "dd437649",
    "metadata": {},
    "outputs": [
@@ -15787,7 +15785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 11,
    "id": "95ec4f4e",
    "metadata": {},
    "outputs": [
@@ -15843,7 +15841,6 @@
    ],
    "source": [
     "# Convert to datetime \n",
-    "# df['Event.Date'] = pd.to_datetime(df['Event.Date'], errors='coerce')\n",
     "df['Event.Date'] = pd.to_datetime(df['Event.Date'], errors='coerce')\n",
     "\n",
     "# Keep only records after from 1983 and later\n",
@@ -15874,7 +15871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 12,
    "id": "ef28a6d4",
    "metadata": {},
    "outputs": [
@@ -15997,7 +15994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 13,
    "id": "91b518b1",
    "metadata": {},
    "outputs": [
@@ -16019,7 +16016,6 @@
     "# Count occurrences of each unique value\n",
     "value_counts = df[col_name].value_counts().sort_index()\n",
     "\n",
-    "\n",
     "# Print each value and its count\n",
     "for value, count in value_counts.items():\n",
     "    print(f\"{value}: {count}\")"
@@ -16027,7 +16023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 14,
    "id": "c5d5f5b5",
    "metadata": {},
    "outputs": [
@@ -16074,7 +16070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 15,
    "id": "cf9005cf",
    "metadata": {},
    "outputs": [
@@ -17434,7 +17430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 16,
    "id": "111707f0",
    "metadata": {},
    "outputs": [
@@ -17511,7 +17507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 17,
    "id": "b814ab75",
    "metadata": {},
    "outputs": [
@@ -17568,7 +17564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 18,
    "id": "05f20594",
    "metadata": {},
    "outputs": [
@@ -19688,7 +19684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 19,
    "id": "56ffe3c6",
    "metadata": {},
    "outputs": [
@@ -19725,7 +19721,6 @@
     "df = df[~df['Model'].isin(unwanted_values)].reset_index(drop=True)\n",
     "\n",
     "\n",
-    "\n",
     "# Check the result\n",
     "print(df[['Make', 'Model']].head(10))\n",
     "print(\"Number of records after dropping NaNs and invalid values from Model:\", len(df))"
@@ -19733,7 +19728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 20,
    "id": "3c774222",
    "metadata": {},
    "outputs": [
@@ -21961,7 +21956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 21,
    "id": "73227cab",
    "metadata": {},
    "outputs": [
@@ -22011,7 +22006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 22,
    "id": "01df492e",
    "metadata": {},
    "outputs": [
@@ -22049,7 +22044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 23,
    "id": "b566d90a",
    "metadata": {},
    "outputs": [
@@ -22076,12 +22071,12 @@
     "df['Engine.Type'] = df['Engine.Type'].replace(['UNK', 'Unknown'], np.nan)\n",
     "\n",
     "# Check results\n",
-    "print(df[['Engine.Type']].head(10))\n"
+    "print(df[['Engine.Type']].head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 24,
    "id": "26c4cdae",
    "metadata": {},
    "outputs": [
@@ -22115,7 +22110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 25,
    "id": "fc10388f",
    "metadata": {},
    "outputs": [
@@ -22147,7 +22142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 26,
    "id": "6479a268",
    "metadata": {},
    "outputs": [
@@ -22182,7 +22177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 27,
    "id": "4be81f19",
    "metadata": {},
    "outputs": [
@@ -22214,7 +22209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 28,
    "id": "72e0a924",
    "metadata": {},
    "outputs": [
@@ -22268,7 +22263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 29,
    "id": "9e40ef89",
    "metadata": {},
    "outputs": [
@@ -22300,7 +22295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 30,
    "id": "c9581ce5",
    "metadata": {},
    "outputs": [
@@ -22342,7 +22337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 31,
    "id": "c58a97e0",
    "metadata": {},
    "outputs": [
@@ -22383,7 +22378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 32,
    "id": "f661bb21",
    "metadata": {},
    "outputs": [
@@ -22450,7 +22445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 33,
    "id": "415ed5da",
    "metadata": {},
    "outputs": [
@@ -22491,21 +22486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 34,
    "id": "b425a512",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('/Users/mikeb/Documents/Flatiron/AD02/lab/dsc-course0-m8-lab/data/AviationData_Cleaned.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14b9fe70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
