--- a/Aviation_Accidents_Data_Analysis.ipynb
+++ b/Aviation_Accidents_Data_Analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 17,
    "id": "f41a5544",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 18,
    "id": "149894c6",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 19,
    "id": "ce1e434a",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "(18190, 27)"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 20,
    "id": "d72da71d",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "[100 rows x 27 columns]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 21,
    "id": "b59e46ed",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 22,
    "id": "d307c888",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 23,
    "id": "a99e3af0",
    "metadata": {
     "scrolled": false
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 24,
    "id": "0417acc2",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
        "27                 64.0                 26.446281  "
       ]
      },
-     "execution_count": 354,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,12 +1265,12 @@
     "lowest_15 = (size_make_totals.sort_values(['Size.Airplane', 'Fatal.Serious.Percentage']).groupby('Size.Airplane').head(15).reset_index(drop=True))\n",
     "\n",
     "# Check results\n",
-    "lowest_15\n"
+    "lowest_15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 25,
    "id": "8543abf5",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 26,
    "id": "835fcc26",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 27,
    "id": "bd247956",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 28,
    "id": "e105e04c",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1748,7 @@
        "27                4          0.054054  "
       ]
      },
-     "execution_count": 358,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,12 +1787,13 @@
     "**Recommendation for safest \"Large\" Airplanes (20 or more total people on the flight):**\n",
     "- The 5x Manufacturers that have never had a Serious/Fatal injury are recommended makes.  These include:  **Cessna, Dehavilland, Grumman, Learjet, and Piper**.\n",
     "- Additionally, while McDonnell Douglas had a non-zero number of Serious/Fatal injuries, these only accounted for 0.72% of their passengers.  The total passenger count for McDonnell Douglas was 9,340 whereas the other \"Large\" Makes did not have more than 179 total passengers.  Based on this, **McDonnell Douglas** is also recommended.\n",
+    "- As a percentage of the total flights recorded, we see all of the previously mentioned manufacturers have had no planes destroyed to very low percentages of planes destroyed.  \n",
     "\n",
     "**Recommendation for safest \"Small\" Airplanes (less than 20 total people on the flight):**\n",
     "- After filtering the data, there were no small manufacturers that had 0 Serious/Fatal injuries.  \n",
-    "- **McDonnell Douglas, Bombardier, and Boeing** had the three lowest percentages, and would all be recommended.  McDonnel Douglas would be the highest recommendation as it also had a low rate of serious/fatal injuries in the \"Large\" category.\n",
+    "- **McDonnell Douglas, Bombardier, and Boeing** had the three lowest percentages, and would all be recommended.  McDonnel Douglas also had a low rate of serious/fatal injuries in the \"Large\" category, but was not in the lowest percentage of planes destroyed as a percentage of total flights.\n",
     "\n",
-    "Of note, Defining an Airplane.Type as \"Small\" if there are less than 20 passengers could bias the results.  It is possible that some of the planes we tagged as \"Small\" were in fact \"Large\", but had a low percentage of their seats filled.  \n"
+    "***Of note, Defining an Airplane.Type as \"Small\" if there are less than 20 passengers could bias the results.  It is possible that some of the planes we tagged as \"Small\" were in fact \"Large\", but had a low percentage of their seats filled.*\n"
    ]
   },
   {
@@ -1816,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 29,
    "id": "2792d157",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 30,
    "id": "d0590708",
    "metadata": {},
    "outputs": [
@@ -1973,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 31,
    "id": "2ce07617",
    "metadata": {},
    "outputs": [
@@ -2047,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 32,
    "id": "31140c95",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mac_intel.c0c1",
    "language": "python",
    "name": "python3"
   },
